--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,8 @@
             "args": [
                 "-g",
                 "${file}",
+                "src/console.c",
+                "src/line.c",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
